swapping http and https so that https shows up first Hopefully this makes swaggerui a bit easier to use for people joining the project
